--- a/ui/client/package.json
+++ b/ui/client/package.json
@@ -22,6 +22,7 @@
     "file-loader": "^1.1.11",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
