--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildEnv": "node bin/buildEnv.js",
+    "setup:client": "cd client && npm install",
     "setup:server": "cd server && npm install",
     "start:server": "cd server && npm run start"
   },
