--- a/ui/server/package.json
+++ b/ui/server/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "frameguard": "^3.0.0",
+    "helmet": "^3.13.0",
     "path": "^0.12.7"
   }
 }
